--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ Carlos Gonzalez
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/wickedcss.min.css" />
-    <title>RNGesus - MiniChallenge 11</title>
+    <title>RNGesus - Random Name Generator</title>
 </head>
 
 <body class="deepBlue1BG">
     <div class="jumbotron jumbotron-fluid cremeColour thiccBorder">
         <div class="container">
             <h1 class="display-4 thiccFont deepBlue3BG">Random Name Generator</h1>
-            <p class="lead thiccFont deepBlue3BG">Use this form to input a list of names. This application will then
+            <p class="lead subFont deepBlue3BG">Use this form to input a list of names. This application will then
                 allow you to select a name from the list at random.</p>
         </div>
     </div>
@@ -31,15 +31,14 @@ Carlos Gonzalez
     <div class="container">
         <div class="row">
             <div class="col-12 center">
-                <div class="card deepBlue4BG " style="width: 30rem; height: 20rem;">
+                <div class="card deepBlue4BG " style="width: 30rem; height: 22rem;">
                     <img src="/images/codestack.jpg" class="card-img-top" alt="CodeStack Academy Logo">
                     <div class="card-body">
                         <h3 class="card-title white center">🙌 RNGesus 🙌</h3>
                         <h5 id="displayName" class="mt-5">
-
                         </h5>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Input a name"
+                            <input type="text" class="form-control placeHolderText text-center" placeholder="Input a name and press enter/return"
                                 aria-label="Names inputted by user" aria-describedby="Enter" id="inputNames">
                         </div>
                         <a id="getName" class="btn deepBlue2BG white center allBtn">Give Me A Random Name</a>
